--- a/public/display.html
+++ b/public/display.html
@@ -3,174 +3,162 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13</title>
+  <title>Laserpointer Display v3.12</title>
   <style>
-    body { margin:0; background:#000; overflow:hidden }
+    body { margin:0; background:black; }
+    canvas { display:block; margin:auto; background:black; }
     #version {
       position:absolute; top:10px; left:10px;
-      color:#fff; font-family:sans-serif;
-      font-size:14px; opacity:0.6; z-index:10;
+      color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
     }
-    canvas { display:block; margin:auto; background:#000 }
   </style>
 </head>
 <body>
-  <div id="version">v3.13 (dyn. Breite)</div>
+  <div id="version">v3.12 (multi-user + smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
-
   <script src="/socket.io/socket.io.js"></script>
   <script>
-  const socket = io();
-  socket.emit("identify",{ role:"display", deviceId:null });
+    const socket = io();
+    socket.emit("identify", { role: "display", deviceId: null });
 
-  const c   = document.getElementById("canvas"),
-        ctx = c.getContext("2d"),
-        CX  = c.width/2,
-        CY  = c.height/2;
+    const c    = document.getElementById("canvas"),
+          ctx  = c.getContext("2d"),
+          CX   = c.width/2,
+          CY   = c.height/2;
 
-  // Standard-Settings
-  let MAX_H  = 20,
-      MAX_V  = 20,
-      MIN_W  = 2,
-      MAX_W  = 12,
-      SMOOTH = 0.15;
+    // Defaults (werden per Admin überschrieben)
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15;
 
-  socket.on("updateSettings", cfg => {
-    if (typeof cfg.maxH   === "number") MAX_H  = cfg.maxH;
-    if (typeof cfg.maxV   === "number") MAX_V  = cfg.maxV;
-    if (typeof cfg.minW   === "number") MIN_W  = cfg.minW;
-    if (typeof cfg.maxW   === "number") MAX_W  = cfg.maxW;
-    if (typeof cfg.smooth === "number") SMOOTH = cfg.smooth;
-    console.log("Settings:",{MAX_H,MAX_V,MIN_W,MAX_W,SMOOTH});
-  });
+    // Datenstrukturen pro Gerät
+    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
+          beta0Map    = {},        // Kalibrier-Nullpunkt beta
+          rawPos      = {},        // deviceId → { x, y }
+          smoothPos   = {},        // deviceId → { x, y } geglättet
+          lastColor   = {},        // deviceId → color
+          lastLight   = {},        // deviceId → lightness %
+          segments    = [];        // alle Liniensegmente
 
-  // Pro Device-State
-  const alpha0  = {},  // Kalibriernullpunkte
-        beta0   = {},
-        rawPos  = {},
-        lastT   = {},
-        segments = {},  // deviceId → [Segments]
-        lastC   = {},
-        lastL   = {};
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
 
-  function parseLight(hsl) {
-    const m = hsl.match(/,\s*(\d+)%\)/);
-    return m ? +m[1] : 50;
-  }
+    // Admin-Einstellungen live übernehmen
+    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
+      if (typeof maxH   === "number") MAX_H  = maxH;
+      if (typeof maxV   === "number") MAX_V  = maxV;
+      if (typeof smooth === "number") SMOOTH = smooth;
+    });
 
-  // löschen
-  socket.on("clear",() => {
-    ctx.clearRect(0,0,c.width,c.height);
-    for(let id in segments) segments[id]=[];
-  });
+    // Neue Bewegungsdaten
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
 
-  // incoming motion
-  socket.on("motion", ({alpha,beta,color,isDrawing,deviceId})=>{
-    if(typeof alpha!=="number"||!deviceId) return;
-    const now = performance.now(),
-          CX2 = CX, CY2 = CY;
+      // Lightness aus HSL extrahieren
+      const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
+      const light = m ? parseInt(m[1],10) : 50;
+      lastLight[deviceId] = light;
+      lastColor[deviceId] = color;
 
-    lastC[deviceId] = color;
-    lastL[deviceId] = parseLight(color);
+      // Kalibrierung beim ersten Zeichnen
+      if (isDrawing && !(deviceId in alpha0Map)) {
+        alpha0Map[deviceId] = alpha;
+        beta0Map [deviceId] = beta;
+        rawPos   [deviceId] = { x: CX, y: CY };
+        smoothPos[deviceId] = { x: CX, y: CY };
+      }
+      if (!(deviceId in alpha0Map)) return;
 
-    // init state-arrays
-    if(!(deviceId in rawPos)){
-      rawPos[deviceId] = {x:CX2,y:CY2};
-      lastT[deviceId]  = now;
-      segments[deviceId] = [];
-      alpha0[deviceId] = null;
-      beta0 [deviceId] = null;
-    }
+      // Winkel-Delta + Wrap-Around
+      let dA = alpha - alpha0Map[deviceId];
+      if (dA > 180)  dA -= 360;
+      if (dA < -180) dA += 360;
+      let dB = beta - beta0Map[deviceId];
 
-    // kalibrieren
-    if(isDrawing && alpha0[deviceId]===null){
-      alpha0[deviceId] = alpha;
-      beta0 [deviceId] = beta;
-    }
-    if(alpha0[deviceId]===null) return;
+      // Begrenzen
+      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
+      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-    // winkel-delta + wrap
-    let dA = alpha - alpha0[deviceId];
-    if(dA>180) dA-=360;
-    if(dA<-180)dA+=360;
-    let dB = beta - beta0[deviceId];
-    dA = Math.max(-MAX_H,Math.min(MAX_H,dA));
-    dB = Math.max(-MAX_V,Math.min(MAX_V,dB));
+      // Mapping auf Canvas (invertiert)
+      const x = CX - (dA / MAX_H) * CX;
+      const y = CY - (dB / MAX_V) * CY;
 
-    // map to canvas
-    const x = CX2 - (dA/MAX_H)*CX2;
-    const y = CY2 - (dB/MAX_V)*CY2;
+      // Linien-Segment, falls gezeichnet wird
+      if (isDrawing) {
+        const prev = rawPos[deviceId];
+        segments.push({
+          x1: prev.x, y1: prev.y,
+          x2: x,      y2: y,
+          color, deviceId
+        });
+      }
 
-    // speed & width
-    const prev = rawPos[deviceId];
-    const dt   = (now - lastT[deviceId])/1000;
-    const dist = Math.hypot(x-prev.x, y-prev.y);
-    const speed= dt>0 ? dist/dt : 0;
-    lastT[deviceId] = now;
+      // Rohdaten speichern
+      rawPos[deviceId] = { x, y };
+    });
 
-    const norm = Math.min(1, speed/2000),
-          w2   = MAX_W - (MAX_W-MIN_W)*norm,
-          w1   = segments[deviceId].length
-                 ? segments[deviceId].slice(-1)[0].w2
-                 : (MIN_W+MAX_W)/2;
+    // Canvas löschen
+    socket.on("clear", () => {
+      segments.length = 0;
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let id in rawPos)    delete rawPos[id];
+      for (let id in smoothPos) delete smoothPos[id];
+      for (let id in alpha0Map) delete alpha0Map[id];
+      for (let id in beta0Map)  delete beta0Map[id];
+      for (let id in lastLight) delete lastLight[id];
+    });
 
-    if(isDrawing){
-      segments[deviceId].push({ x1:prev.x, y1:prev.y, x2:x, y2:y, w1,w2 });
-    }
-    rawPos[deviceId] = {x,y};
-  });
+    // Puls + Render-Loop
+    let pulse = 0, growing = true;
+    function render() {
+      ctx.clearRect(0,0,c.width,c.height);
 
-  // render-loop
-  let pulse=0, grow=true;
-  (function R(){
-    ctx.clearRect(0,0,c.width,c.height);
+      // 1) Linien zeichnen
+      for (const s of segments) {
+        ctx.strokeStyle = s.color;
+        ctx.lineWidth   = 6;
+        ctx.beginPath();
+        ctx.moveTo(s.x1, s.y1);
+        ctx.lineTo(s.x2, s.y2);
+        ctx.stroke();
+      }
 
-    // zeichne alle devices
-    for(let id in segments){
-      const segs = segments[id];
-      const col  = lastC[id] || "#f00";
-      ctx.strokeStyle = col;
+      // 2) Punkt-Glättung & Puls
+      pulse += growing ? 0.2 : -0.2;
+      if (pulse > 2)  growing = false;
+      if (pulse < 0)  growing = true;
 
-      for(let s of segs){
-        const steps = 20;
-        for(let i=0;i<steps;i++){
-          const t0 = i/steps, t1=(i+1)/steps;
-          const X0 = s.x1 + (s.x2-s.x1)*t0;
-          const Y0 = s.y1 + (s.y2-s.y1)*t0;
-          const X1 = s.x1 + (s.x2-s.x1)*t1;
-          const Y1 = s.y1 + (s.y2-s.y1)*t1;
-          const W  = s.w1 + (s.w2-s.w1)*t0;
-          ctx.lineWidth = W;
+      for (const id in rawPos) {
+        const target = rawPos[id];
+        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
+
+        // Glätten
+        smooth.x += (target.x - smooth.x) * SMOOTH;
+        smooth.y += (target.y - smooth.y) * SMOOTH;
+
+        const col   = lastColor[id] || "hsl(0,100%,50%)";
+        const light = lastLight[id] || 50;
+        const r     = 4 + pulse;
+
+        // Punkt zeichnen
+        ctx.beginPath();
+        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
+        ctx.fillStyle = col;
+        ctx.fill();
+
+        // Weißer Ring bei Low-Light
+        if (light < 20) {
           ctx.beginPath();
-          ctx.moveTo(X0,Y0);
-          ctx.lineTo(X1,Y1);
+          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
+          ctx.strokeStyle = "#fff";
+          ctx.lineWidth   = 3;
           ctx.stroke();
         }
       }
+
+      requestAnimationFrame(render);
     }
-
-    // pulsierender punkt
-    pulse += grow?0.2:-0.2;
-    if(pulse>2) grow=false;
-    if(pulse<0) grow=true;
-
-    for(let id in rawPos){
-      const {x,y}= rawPos[id];
-      const R  = ((segments[id]?.slice(-1)[0]?.w2)||MIN_W)/2 + pulse;
-      ctx.fillStyle   = lastC[id]||"#f00";
-      ctx.beginPath();
-      ctx.arc(x,y,R,0,2*Math.PI);
-      ctx.fill();
-      if(lastL[id]<20){
-        ctx.strokeStyle="#fff"; ctx.lineWidth=3;
-        ctx.beginPath();
-        ctx.arc(x,y,R+3,0,2*Math.PI);
-        ctx.stroke();
-      }
-    }
-
-    requestAnimationFrame(R);
-  })();
+    render();
   </script>
 </body>
 </html>
