--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.12</title>
+  <title>Laserpointer Display v3.12 + dyn. Breite</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,11 +14,12 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.12 (multi-user + smoothing)</div>
+  <div id="version">v3.12 (dyn. Breite)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+    // wir bleiben bei multi-user+motion von v3.12
     socket.emit("identify", { role: "display", deviceId: null });
 
     const c    = document.getElementById("canvas"),
@@ -26,130 +27,147 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Defaults (werden per Admin überschrieben)
+    // Default-Einstellungen
     let MAX_H   = 20,
         MAX_V   = 20,
         SMOOTH  = 0.15;
 
-    // Datenstrukturen pro Gerät
-    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
-          beta0Map    = {},        // Kalibrier-Nullpunkt beta
-          rawPos      = {},        // deviceId → { x, y }
-          smoothPos   = {},        // deviceId → { x, y } geglättet
-          lastColor   = {},        // deviceId → color
-          lastLight   = {},        // deviceId → lightness %
-          segments    = [];        // alle Liniensegmente
+    // Breiten-Range
+    const MIN_W = 5,
+          MAX_W = 12,
+          SPEED_THRESHOLD = 2000; // px/s
+
+    // State pro Gerät
+    const alpha0Map = {},    // Kalibrier-Null alpha
+          beta0Map  = {},    // Kalibrier-Null beta
+          rawPos    = {},    // deviceId -> {x,y}
+          lastTime  = {},    // deviceId -> ms
+          lastCol   = {},    // deviceId -> Farbe
+          lastLight = {},    // deviceId -> Helligkeit
+          segments  = [];    // Liniensegmente
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
 
-    // Admin-Einstellungen live übernehmen
+    // Admin-Settings live übernehmen
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
       if (typeof maxH   === "number") MAX_H  = maxH;
       if (typeof maxV   === "number") MAX_V  = maxV;
       if (typeof smooth === "number") SMOOTH = smooth;
+      console.log("Settings updated:", {MAX_H, MAX_V, SMOOTH});
     });
 
-    // Neue Bewegungsdaten
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
+    // Hilfsfunktion: Helligkeit aus HSL
+    function parseLight(hsl) {
+      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
+      return m? +m[1] : 50;
+    }
 
-      // Lightness aus HSL extrahieren
-      const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
-      const light = m ? parseInt(m[1],10) : 50;
-      lastLight[deviceId] = light;
-      lastColor[deviceId] = color;
+    // Canvas löschen
+    socket.on("clear", () => {
+      segments.length = 0;
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let k of [alpha0Map,beta0Map,rawPos,lastTime,lastCol,lastLight]) {
+        Object.keys(k).forEach(id=>delete k[id]);
+      }
+    });
+
+    // Bewegungsdaten empfangen
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number") return;
+      const now = performance.now();
+
+      // Farbe & Helligkeit merken
+      lastCol[deviceId]   = color;
+      lastLight[deviceId] = parseLight(color);
 
       // Kalibrierung beim ersten Zeichnen
       if (isDrawing && !(deviceId in alpha0Map)) {
         alpha0Map[deviceId] = alpha;
         beta0Map [deviceId] = beta;
         rawPos   [deviceId] = { x: CX, y: CY };
-        smoothPos[deviceId] = { x: CX, y: CY };
+        lastTime [deviceId] = now;
+        return;
       }
       if (!(deviceId in alpha0Map)) return;
 
       // Winkel-Delta + Wrap-Around
       let dA = alpha - alpha0Map[deviceId];
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
+      if      (dA > 180)  dA -= 360;
+      else if (dA < -180) dA += 360;
       let dB = beta - beta0Map[deviceId];
 
-      // Begrenzen
+      // Clamp auf Max-Winkel
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Mapping auf Canvas (invertiert)
+      // Mapping auf Canvas-Koordinaten
       const x = CX - (dA / MAX_H) * CX;
       const y = CY - (dB / MAX_V) * CY;
 
-      // Linien-Segment, falls gezeichnet wird
+      // Geschwindigkeit berechnen (px/sec)
+      const prev = rawPos[deviceId];
+      const dt   = (now - lastTime[deviceId]) / 1000; // s
+      const dx   = x - prev.x, dy = y - prev.y;
+      const speed = dt > 0 ? Math.hypot(dx, dy) / dt : 0;
+      lastTime[deviceId] = now;
+
+      // Neues Segment beim Zeichnen
       if (isDrawing) {
-        const prev = rawPos[deviceId];
+        // Normierte Geschwindigkeit [0..1]
+        const norm = Math.min(1, speed / SPEED_THRESHOLD);
+        // Je schneller, desto dünner
+        const w = MAX_W - (MAX_W - MIN_W) * norm;
+
         segments.push({
           x1: prev.x, y1: prev.y,
           x2: x,      y2: y,
-          color, deviceId
+          color, width: w
         });
       }
 
-      // Rohdaten speichern
+      // Raw-Position aktualisieren
       rawPos[deviceId] = { x, y };
-    });
-
-    // Canvas löschen
-    socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0,0,c.width,c.height);
-      for (let id in rawPos)    delete rawPos[id];
-      for (let id in smoothPos) delete smoothPos[id];
-      for (let id in alpha0Map) delete alpha0Map[id];
-      for (let id in beta0Map)  delete beta0Map[id];
-      for (let id in lastLight) delete lastLight[id];
     });
 
     // Puls + Render-Loop
     let pulse = 0, growing = true;
-    function render() {
+    (function render() {
       ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) Linien zeichnen
+      // 1) alle Linien-Segmente zeichnen
       for (const s of segments) {
         ctx.strokeStyle = s.color;
-        ctx.lineWidth   = 6;
+        ctx.lineWidth   = s.width;
         ctx.beginPath();
         ctx.moveTo(s.x1, s.y1);
         ctx.lineTo(s.x2, s.y2);
         ctx.stroke();
       }
 
-      // 2) Punkt-Glättung & Puls
+      // 2) pulsierender Punkt weiterhin wie gehabt
       pulse += growing ? 0.2 : -0.2;
       if (pulse > 2)  growing = false;
       if (pulse < 0)  growing = true;
 
       for (const id in rawPos) {
-        const target = rawPos[id];
-        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
+        const { x, y } = rawPos[id];
+        const col      = lastCol[id]   || "#fff";
+        // letzte Segmentdicke als Ausgang
+        const lastSeg  = segments.slice().reverse().find(s => s.color === col);
+        const baseW    = lastSeg ? lastSeg.width : (MIN_W+MAX_W)/2;
+        const r        = baseW/2 + pulse;
 
-        // Glätten
-        smooth.x += (target.x - smooth.x) * SMOOTH;
-        smooth.y += (target.y - smooth.y) * SMOOTH;
-
-        const col   = lastColor[id] || "hsl(0,100%,50%)";
-        const light = lastLight[id] || 50;
-        const r     = 4 + pulse;
-
-        // Punkt zeichnen
+        // Punkt
         ctx.beginPath();
-        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
+        ctx.arc(x, y, r, 0, 2*Math.PI);
         ctx.fillStyle = col;
         ctx.fill();
 
         // Weißer Ring bei Low-Light
-        if (light < 20) {
+        if ((lastLight[id]||50) < 20) {
           ctx.beginPath();
-          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
+          ctx.arc(x, y, r+3, 0, 2*Math.PI);
           ctx.strokeStyle = "#fff";
           ctx.lineWidth   = 3;
           ctx.stroke();
@@ -157,8 +175,7 @@
       }
 
       requestAnimationFrame(render);
-    }
-    render();
+    })();
   </script>
 </body>
 </html>
