--- a/public/display.html
+++ b/public/display.html
@@ -14,12 +14,11 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.12 (dyn. Breite)</div>
+  <div id="version">v3.12 (dyn. Breite, glatte Interp.)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    // wir bleiben bei multi-user+motion von v3.12
     socket.emit("identify", { role: "display", deviceId: null });
 
     const c    = document.getElementById("canvas"),
@@ -27,154 +26,145 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Default-Einstellungen
     let MAX_H   = 20,
         MAX_V   = 20,
         SMOOTH  = 0.15;
 
-    // Breiten-Range
+    // neu: Threshold niedriger, damit breite Abstufung
+    const SPEED_THRESHOLD = 600; 
     const MIN_W = 5,
-          MAX_W = 12,
-          SPEED_THRESHOLD = 2000; // px/s
+          MAX_W = 12;
 
     // State pro Gerät
-    const alpha0Map = {},    // Kalibrier-Null alpha
-          beta0Map  = {},    // Kalibrier-Null beta
-          rawPos    = {},    // deviceId -> {x,y}
-          lastTime  = {},    // deviceId -> ms
-          lastCol   = {},    // deviceId -> Farbe
-          lastLight = {},    // deviceId -> Helligkeit
-          segments  = [];    // Liniensegmente
+    const alpha0 = {}, beta0 = {},
+          rawPos = {}, lastT = {},
+          lastCol = {}, lastLight = {},
+          segments = {}; // deviceId → [ {x1,y1,x2,y2,w1,w2,color}, … ]
 
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
-    // Admin-Settings live übernehmen
-    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
-      if (typeof maxH   === "number") MAX_H  = maxH;
-      if (typeof maxV   === "number") MAX_V  = maxV;
-      if (typeof smooth === "number") SMOOTH = smooth;
-      console.log("Settings updated:", {MAX_H, MAX_V, SMOOTH});
-    });
-
-    // Hilfsfunktion: Helligkeit aus HSL
-    function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
-      return m? +m[1] : 50;
+    function parseLight(hsl){
+      const m = hsl.match(/,\s*(\d+)%\)/);
+      return m?+m[1]:50;
     }
 
-    // Canvas löschen
+    // clear
     socket.on("clear", () => {
-      segments.length = 0;
       ctx.clearRect(0,0,c.width,c.height);
-      for (let k of [alpha0Map,beta0Map,rawPos,lastTime,lastCol,lastLight]) {
-        Object.keys(k).forEach(id=>delete k[id]);
-      }
+      for (let id in segments) segments[id] = [];
     });
 
-    // Bewegungsdaten empfangen
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number") return;
+    // motion
+    socket.on("motion", ({alpha,beta,color,isDrawing,deviceId}) => {
+      if (typeof alpha!=="number" || !deviceId) return;
       const now = performance.now();
 
-      // Farbe & Helligkeit merken
       lastCol[deviceId]   = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrierung beim ersten Zeichnen
-      if (isDrawing && !(deviceId in alpha0Map)) {
-        alpha0Map[deviceId] = alpha;
-        beta0Map [deviceId] = beta;
-        rawPos   [deviceId] = { x: CX, y: CY };
-        lastTime [deviceId] = now;
-        return;
+      if (!(deviceId in rawPos)) {
+        rawPos[deviceId] = {x:CX,y:CY};
+        lastT[deviceId]  = now;
+        segments[deviceId] = [];
+        alpha0[deviceId] = null;
+        beta0 [deviceId] = null;
       }
-      if (!(deviceId in alpha0Map)) return;
 
-      // Winkel-Delta + Wrap-Around
-      let dA = alpha - alpha0Map[deviceId];
-      if      (dA > 180)  dA -= 360;
-      else if (dA < -180) dA += 360;
-      let dB = beta - beta0Map[deviceId];
+      // calibrate on first draw
+      if (isDrawing && alpha0[deviceId]===null) {
+        alpha0[deviceId] = alpha;
+        beta0 [deviceId] = beta;
+      }
+      if (alpha0[deviceId]===null) return;
 
-      // Clamp auf Max-Winkel
-      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
-      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
+      // delta + wrap
+      let dA = alpha - alpha0[deviceId];
+      if (dA>180)  dA -= 360;
+      if (dA<-180) dA += 360;
+      let dB = beta - beta0[deviceId];
+      dA = Math.max(-MAX_H,Math.min(MAX_H,dA));
+      dB = Math.max(-MAX_V,Math.min(MAX_V,dB));
 
-      // Mapping auf Canvas-Koordinaten
-      const x = CX - (dA / MAX_H) * CX;
-      const y = CY - (dB / MAX_V) * CY;
+      // map to canvas
+      const x = CX - (dA/MAX_H)*CX;
+      const y = CY - (dB/MAX_V)*CY;
 
-      // Geschwindigkeit berechnen (px/sec)
-      const prev = rawPos[deviceId];
-      const dt   = (now - lastTime[deviceId]) / 1000; // s
-      const dx   = x - prev.x, dy = y - prev.y;
-      const speed = dt > 0 ? Math.hypot(dx, dy) / dt : 0;
-      lastTime[deviceId] = now;
+      // speed
+      const prev = rawPos[deviceId],
+            dt   = (now - lastT[deviceId])/1000,
+            dist = Math.hypot(x-prev.x, y-prev.y),
+            speed= dt>0? dist/dt : 0;
+      lastT[deviceId] = now;
 
-      // Neues Segment beim Zeichnen
       if (isDrawing) {
-        // Normierte Geschwindigkeit [0..1]
-        const norm = Math.min(1, speed / SPEED_THRESHOLD);
-        // Je schneller, desto dünner
-        const w = MAX_W - (MAX_W - MIN_W) * norm;
+        const norm = Math.min(1, speed/SPEED_THRESHOLD);
+        const w2   = MAX_W - (MAX_W-MIN_W)*norm;
+        // w1 aus letztem Segment
+        const lastSeg = segments[deviceId].slice(-1)[0];
+        const w1 = lastSeg ? lastSeg.w2 : (MIN_W+MAX_W)/2;
 
-        segments.push({
+        segments[deviceId].push({
           x1: prev.x, y1: prev.y,
           x2: x,      y2: y,
-          color, width: w
+          w1, w2,
+          color
         });
       }
 
-      // Raw-Position aktualisieren
       rawPos[deviceId] = { x, y };
     });
 
-    // Puls + Render-Loop
-    let pulse = 0, growing = true;
-    (function render() {
+    // render
+    let pulse=0, grow=true;
+    (function R(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) alle Linien-Segmente zeichnen
-      for (const s of segments) {
-        ctx.strokeStyle = s.color;
-        ctx.lineWidth   = s.width;
-        ctx.beginPath();
-        ctx.moveTo(s.x1, s.y1);
-        ctx.lineTo(s.x2, s.y2);
-        ctx.stroke();
+      // Linien zeichnen mit glatter Interpolation
+      for (let id in segments) {
+        const segs = segments[id];
+        ctx.strokeStyle = lastCol[id] || "#f00";
+        for (let s of segs) {
+          const steps = 20;
+          for (let i=0;i<steps;i++){
+            const t0 = i/steps, t1=(i+1)/steps;
+            const X0 = s.x1 + (s.x2-s.x1)*t0;
+            const Y0 = s.y1 + (s.y2-s.y1)*t0;
+            const X1 = s.x1 + (s.x2-s.x1)*t1;
+            const Y1 = s.y1 + (s.y2-s.y1)*t1;
+            const W  = s.w1 + (s.w2-s.w1)*t0;
+            ctx.lineWidth = W;
+            ctx.beginPath();
+            ctx.moveTo(X0,Y0);
+            ctx.lineTo(X1,Y1);
+            ctx.stroke();
+          }
+        }
       }
 
-      // 2) pulsierender Punkt weiterhin wie gehabt
-      pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2)  growing = false;
-      if (pulse < 0)  growing = true;
+      // Pulsierender Punkt
+      pulse += grow?0.2:-0.2;
+      if (pulse>2) grow=false;
+      if (pulse<0) grow=true;
 
-      for (const id in rawPos) {
-        const { x, y } = rawPos[id];
-        const col      = lastCol[id]   || "#fff";
-        // letzte Segmentdicke als Ausgang
-        const lastSeg  = segments.slice().reverse().find(s => s.color === col);
-        const baseW    = lastSeg ? lastSeg.width : (MIN_W+MAX_W)/2;
-        const r        = baseW/2 + pulse;
+      for (let id in rawPos) {
+        const {x,y} = rawPos[id];
+        const lastSeg = segments[id].slice(-1)[0];
+        const baseW   = lastSeg? lastSeg.w2 : (MIN_W+MAX_W)/2;
+        const r       = baseW/2 + pulse;
 
-        // Punkt
         ctx.beginPath();
-        ctx.arc(x, y, r, 0, 2*Math.PI);
-        ctx.fillStyle = col;
+        ctx.fillStyle = lastCol[id]||"#f00";
+        ctx.arc(x,y,r,0,2*Math.PI);
         ctx.fill();
 
-        // Weißer Ring bei Low-Light
-        if ((lastLight[id]||50) < 20) {
-          ctx.beginPath();
-          ctx.arc(x, y, r+3, 0, 2*Math.PI);
-          ctx.strokeStyle = "#fff";
+        if ((lastLight[id]||50)<20) {
           ctx.lineWidth   = 3;
+          ctx.strokeStyle = "#fff";
+          ctx.beginPath();
+          ctx.arc(x,y,r+3,0,2*Math.PI);
           ctx.stroke();
         }
       }
 
-      requestAnimationFrame(render);
+      requestAnimationFrame(R);
     })();
   </script>
 </body>
