--- a/public/admin.html
+++ b/public/admin.html
@@ -2,97 +2,73 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Panel v3.8</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Admin Panel v3.10</title>
   <style>
-    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif; }
-    h1 { margin-top:0; }
-    #status { margin:10px 0; font-weight:bold; }
-    .setting { margin:15px 0; }
-    label { display:inline-block; width:200px; vertical-align:middle; }
-    input[type="number"], input[type="range"] { vertical-align:middle; }
-    #smoothVal { display:inline-block; width:40px; text-align:right; margin-left:8px; }
-    #clear { margin-top:10px; padding:8px 16px; background:#c33; color:#fff; border:none; cursor:pointer; }
-    table { width:100%; margin-top:20px; border-collapse:collapse; }
-    th, td { padding:8px; border:1px solid #444; text-align:left; }
-    th { background:#222; }
+    body { margin:0; padding:20px; background:#111; color:#fff; font-family:sans-serif }
+    .setting { margin:12px 0 }
+    label { display:inline-block; width:240px }
+    input { width:100px; padding:4px }
+    button { padding:8px 16px; background:#c33; color:#fff; border:none; cursor:pointer }
   </style>
 </head>
 <body>
-  <h1>Admin Panel v3.8</h1>
-  <div id="status">
-    Display: <span id="dispState">–</span>
-  </div>
+  <h1>Admin Panel v3.10</h1>
 
   <div class="setting">
     <label for="maxH">Max. Winkel horizontal (°):</label>
-    <input id="maxH" type="number" value="20" min="0" max="180"/>
+    <input id="maxH" type="number" value="20" min="1" max="180"/>
   </div>
   <div class="setting">
     <label for="maxV">Max. Winkel vertikal (°):</label>
-    <input id="maxV" type="number" value="20" min="0" max="180"/>
+    <input id="maxV" type="number" value="20" min="1" max="180"/>
   </div>
   <div class="setting">
-    <label for="smooth">Glättung (% – 0 = volle Glättung):</label>
-    <input id="smooth" type="range" min="0" max="100" value="20"/>
-    <span id="smoothVal">20 %</span>
+    <label for="minW">Min. Strichstärke (px):</label>
+    <input id="minW" type="number" value="5" min="1" max="100"/>
+  </div>
+  <div class="setting">
+    <label for="maxW">Max. Strichstärke (px):</label>
+    <input id="maxW" type="number" value="12" min="1" max="200"/>
+  </div>
+  <div class="setting">
+    <label for="smooth">Glättung (0–1):</label>
+    <input id="smooth" type="number" step="0.01" value="0.15" min="0" max="1"/>
   </div>
 
   <button id="clear">Canvas löschen</button>
 
-  <h2>Verbundene Handys</h2>
-  <table>
-    <thead><tr><th>Geräte-ID</th><th>IP-Adresse</th></tr></thead>
-    <tbody id="clientList"></tbody>
-  </table>
-
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
-    socket.emit("identify", { role: "admin", deviceId: null });
+    const sock   = io();
+    const eMaxH  = document.getElementById("maxH");
+    const eMaxV  = document.getElementById("maxV");
+    const eMinW  = document.getElementById("minW");
+    const eMaxW  = document.getElementById("maxW");
+    const eSmooth= document.getElementById("smooth");
+    const btnClr = document.getElementById("clear");
 
-    const elMaxH     = document.getElementById("maxH");
-    const elMaxV     = document.getElementById("maxV");
-    const elSmooth   = document.getElementById("smooth");
-    const elSmoothVal= document.getElementById("smoothVal");
-    const btnClear   = document.getElementById("clear");
-    const tblBody    = document.getElementById("clientList");
-    const dispState  = document.getElementById("dispState");
+    sock.emit("identify",{ role:"admin", deviceId:null });
 
-    function sendSettings() {
-      const maxH   = parseFloat(elMaxH.value) || 20;
-      const maxV   = parseFloat(elMaxV.value) || 20;
-      // invertierter Slider: 20 % → smooth = 0.80
-      const smooth = 1 - (parseFloat(elSmooth.value) / 100);
-      socket.emit("updateSettings", { maxH, maxV, smooth });
+    function send() {
+      const cfg = {
+        maxH:   parseFloat(eMaxH.value),
+        maxV:   parseFloat(eMaxV.value),
+        minW:   parseFloat(eMinW.value),
+        maxW:   parseFloat(eMaxW.value),
+        smooth: parseFloat(eSmooth.value)
+      };
+      sock.emit("updateSettings", cfg);
     }
 
-    elMaxH.addEventListener("change", sendSettings);
-    elMaxV.addEventListener("change", sendSettings);
-    elSmooth.addEventListener("input", () => {
-      elSmoothVal.textContent = elSmooth.value + " %";
-      sendSettings();
-    });
+    [eMaxH,eMaxV,eMinW,eMaxW,eSmooth].forEach(el =>
+      el.addEventListener("change", send)
+    );
 
-    btnClear.addEventListener("click", () => {
-      socket.emit("clear");
-    });
+    btnClr.addEventListener("click", () => sock.emit("clear"));
 
-    // Initial die Settings senden
-    sendSettings();
-
-    socket.on("client-list", list => {
-      const hasDisp = list.some(c => c.type === "display");
-      dispState.textContent = hasDisp ? "verbunden ✅" : "nicht verbunden ❌";
-
-      const ctrls = list.filter(c => c.type === "control" && c.active);
-      tblBody.innerHTML = "";
-      ctrls.forEach(({ deviceId, ip }) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${deviceId || "–"}</td><td>${ip}</td>`;
-        tblBody.appendChild(tr);
-      });
-    });
+    // initial
+    send();
   </script>
 </body>
 </html>
